--- a/codebuild-buildspec.yml
+++ b/codebuild-buildspec.yml
@@ -5,8 +5,7 @@ phases:
     commands:
       - pwd
       - ls -alrt
-      - aws sts get-caller-identity --query 'Account' --output text
-      - . ./docker/codebuild-extras.sh
+      - . ./codebuild-extras.sh
       - aws --version
       - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
       - IMAGE_TAG=${COMMIT_HASH:=latest}
