--- a/docker/codebuild-buildspec.yml
+++ b/docker/codebuild-buildspec.yml
@@ -5,21 +5,21 @@ phases:
     commands:
       - pwd
       - ls -alrt
-      - . ./codebuild-extras.sh
+      - . ./docker/codebuild-extras.sh
       - aws --version
-      - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
-      - IMAGE_TAG=${COMMIT_HASH:=latest}
       - printenv
       - echo "------ ${CODEBUILD_GIT_BRANCH} ------"
   build:
     commands:
-      - docker-compose build test1
+      - mkdir -p docker/artifacts
+      - cd docker && docker-compose build compile
+      - cd docker && docker-compose up compile
   post_build:
     commands:
       - AWS_ACCESS_KEY_ID=foo AWS_SECRET_ACCESS_KEY=bar echo "ToDo - install to ECS..."
 
 artifacts:
   files:
-    - README.md
+    - docker/artifacts/*.jar
   name: artifact-${CODEBUILD_GIT_BRANCH}-$(date +%Y-%m-%d_%H-%M-%S).zip
 
